--- a/java-app/buildspec.yml
+++ b/java-app/buildspec.yml
@@ -5,7 +5,7 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - $(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)
-      - cd web
+      - cd java-app
   build:
     commands:
       - echo Run unit test
