--- a/java-app/buildspec.yml
+++ b/java-app/buildspec.yml
@@ -6,6 +6,9 @@ phases:
       - echo Logging in to Amazon ECR...
       - $(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)
       - cd java-app
+  install:
+    runtime-versions:
+      java: corretto8
   build:
     commands:
       - echo Build started in `date`
