--- a/java-app/buildspec.yml
+++ b/java-app/buildspec.yml
@@ -11,11 +11,13 @@ phases:
       java: corretto8
   build:
     commands:
-      - echo Build started in `date`
-      - mvn test 
       - echo Run unit test
+      - create database notes_app
+      - mvn package
+      - java -jar target/easy-notes-1.0.0.jar
       - docker-compose run web python test_basic.py
       - echo Build started on `date`
+      - mvn test 
       - echo Building the Docker image...          
       - docker build -t $IMAGE_REPO_NAME:$CODEBUILD_RESOLVED_SOURCE_VERSION .
       - docker tag $IMAGE_REPO_NAME:$CODEBUILD_RESOLVED_SOURCE_VERSION $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$CODEBUILD_RESOLVED_SOURCE_VERSION      
