--- a/java-app/Dockerfile
+++ b/java-app/Dockerfile
@@ -2,5 +2,7 @@ FROM openjdk:7
 
 copy ./target /usr/local/
 
+EXPOSE 8080
+
 ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions","-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/usr/local/target/easy-notes-1.0.0.jar"]
 
