--- a/java-app/Dockerfile
+++ b/java-app/Dockerfile
@@ -4,5 +4,5 @@ copy ./target /usr/local/target/
 
 EXPOSE 8080
 
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions","-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/usr/local/target/easy-notes-1.0.0.jar"]
+ENTRYPOINT ["java","-jar","/usr/local/target/easy-notes-1.0.0.jar"]
 
