--- a/java-app/buildspec.yml
+++ b/java-app/buildspec.yml
@@ -23,8 +23,8 @@ phases:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$CODEBUILD_RESOLVED_SOURCE_VERSION
-
+      - ls -ltrh
 artifacts:
   files:
     - target/easy-notes-1.0.0.jar
-  discard-paths: yes
+  discard-paths: no
