--- a/java-app/buildspec.yml
+++ b/java-app/buildspec.yml
@@ -24,6 +24,7 @@ phases:
       - echo Pushing the Docker image...
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$CODEBUILD_RESOLVED_SOURCE_VERSION
       - ls -ltrh target
+      - pwd
 artifacts:
   files:
     - '**/*'
